# asteroid-compass

./: CMakeLists.txt  README.md  asteroid-compass.desktop.template  asteroid-compass.in  asteroid-compass.pro  main.qml  resources.qrc
i18n/: asteroid-compass.ar.ts  asteroid-compass.ast.ts  asteroid-compass.az.ts  asteroid-compass.be.ts  asteroid-compass.bqi.ts  asteroid-compass.ca.ts  asteroid-compass.cs.ts  asteroid-compass.da.ts  asteroid-compass.de_DE.ts  asteroid-compass.desktop.h  asteroid-compass.el.ts  asteroid-compass.en_GB.ts  asteroid-compass.eo.ts  asteroid-compass.es.ts  asteroid-compass.es_AR.ts  asteroid-compass.fa.ts  asteroid-compass.fi.ts  asteroid-compass.fr.ts  asteroid-compass.gl.ts  asteroid-compass.he.ts  asteroid-compass.hi.ts  asteroid-compass.hr.ts  asteroid-compass.hu.ts  asteroid-compass.ia.ts  asteroid-compass.id.ts  asteroid-compass.isv.ts  asteroid-compass.it.ts  asteroid-compass.ja.ts  asteroid-compass.ka.ts  asteroid-compass.ko.ts  asteroid-compass.lb.ts  asteroid-compass.lt.ts  asteroid-compass.mr.ts  asteroid-compass.ms.ts  asteroid-compass.nb_NO.ts  asteroid-compass.nl_BE.ts  asteroid-compass.nl_NL.ts  asteroid-compass.oc.ts  asteroid-compass.pl.ts  asteroid-compass.pt.ts  (+16 more)
src/: CMakeLists.txt  main.qml
